--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,10 @@
   }
   body {
     background-color: rgb(23, 31, 35);
+    color:  rgb(152, 121, 74);
   }
   main {
     padding: 0rem;
-    color:rgb(56, 29, 29);
     height: 100vh;
     background-position: center;
     
@@ -35,8 +35,13 @@
     color: rgb(152, 121, 74);
     text-align: center;
     filter:drop-shadow(0px 0px 10px rgb(53, 106, 112));
+    transition: all 0.5s ease-in-out;
   }
   
+
+  h1:hover {
+    filter:drop-shadow(0px 0px 10px rgb(213, 216, 160));
+  }
   .flex {
     display: flex;
     flex-direction: column;
@@ -78,8 +83,14 @@
       background-position: center;
       background-size: cover;
       filter:drop-shadow(0px 0px 10px rgb(53, 106, 112));
-     
-      
+  }
+  input[type='radio'] {
+    margin-top: 0.5rem;
+    border: 0;
+    border-radius: 0.3rem;
+    text-align: center;
+
+
   }
   #divImg {
     margin-top: 3rem;
@@ -87,6 +98,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+  }
+  input[type='checkbox'] {
+    margin-top: 1rem;
+    border: 0;
+    border-radius: 0.3rem;
+    text-align: center;
 
   }
   
@@ -108,20 +126,23 @@
     padding: 0.7rem;
     font-family: roboto, "Helvetica Neue",;
     filter:drop-shadow(0px 0px 10px rgb(53, 106, 112));
+    transition: all 0.5s ease-in-out;
     list-style: none;
   }
-  
-  #lista li:hover {
-    background-color: rgb(245, 245, 220);
-    
 
-}
+  
+
+
 
 label {
     color: rgb(152, 121, 74);
     padding: 0.3rem;
     font-family: roboto, "Helvetica Neue",;
     filter:drop-shadow(0px 0px 10px rgb(151, 205, 211));
+    transition: all 0.5s ease-in-out;
+}
+label:hover{
+  filter:drop-shadow(0px 0px 10px rgb(213, 216, 160));
 }
 
 #campeao {
@@ -136,6 +157,16 @@ label {
  
     
 }
+
+p {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.1rem;
+    font-family: roboto, "Helvetica Neue",;
+    filter:drop-shadow(0px 0px 10px rgb(151, 205, 211));
+    
+}
+
 
 
 @media screen and (max-width: 600px) {
