--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,24 @@
   filter:grayscale(0.5)
   }
 
+  #Mulher{
+    position: absolute;
+    left: 3rem;
+    top: 13rem;
+  }
+
+  #Homem{
+    position: absolute;
+    right: 7rem;
+  }
+
 .nav-link{
   color: rgb(177, 116, 24) !important;
   font-size: 1.3rem;
 }
+
+.nav-link:hover {
+  filter:drop-shadow(0px 0px 10px rgb(213, 216, 160));}
 
 .active{
   color: rgb(15, 11, 4) !important;
