--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,14 @@
     left: 3rem;
     top: 10rem;
     height: 49rem;
+    filter:drop-shadow(0px 0px 10px rgba(213, 216, 160, 0.488));
   }
 
   #Homem{
     position: absolute;
     height: 35rem;
     right: 7rem;
+    filter:drop-shadow(0px 0px 10px rgba(213, 216, 160, 0.488));
   }
 
 .nav-link{
