--- a/css/style.css
+++ b/css/style.css
@@ -112,8 +112,9 @@
       background: url(../img/prestige_border.png);
       background-repeat: no-repeat;
       background-position: center;
-      background-size: cover;
+      background-size:cover;
       filter:drop-shadow(0px 0px 10px rgb(53, 106, 112));
+      min-width: 18rem;
   }
   input[type='radio'] {
     margin-top: 0.5rem;
@@ -253,7 +254,11 @@ p {
 
 @media screen and (max-width: 600px) {
  form{
-       padding: 0.7rem 6rem 7rem 6rem;    }
+       padding: 0.7rem 6rem 8rem 6rem;
+     background-size: auto;
+      
+      
+    }
 }
 
 @media screen and (max-width: 400px) {
@@ -264,12 +269,6 @@ p {
     }
 }
 
-@media screen and (max-width: 600px) {
- form{
-       padding: 0.7rem 5rem 7rem 5rem;    }
-
-       
-}
 
 @media screen and (min-width: 600px) {
   article img{
